$Id$

2.0.4-pre-1
	Make command line option -n actualy work

	'set style' now works.  Possbile values at the moment are
	   'default' 'basic' or 'perl', but the last only if a
	   format_msg() function is found in .owlconf
	Added the 'oneline' style
	
2.0.3
	Don't ring the terminal bell on mail messages.
	Nuke <FONT>
	Make the build work a little better on OSX
	Fixed a bug in fmtext
	Expanded the size of the hostname buffer
	
2.0.2
	Fixed bug in 'startup' command.

2.0.1
	Moved newmsgproc stuff to a function procedure
	Added the 'newlinestrip' variable, on by default, that strips
	  leading and trailing newlines from incoming messages.
	Fixed a case sensitivity probelm in owl_message_is_personal and
	   owl_message_is_private
	The message object now uses a list of attributes internally, in
  	  prep. for supporting new messaging protocols
	owl_function_info now uses fmtext instead of one staticly sized
	  buffer
	in owl_message_get_cc() require that the colon be present after
	  cc.
	Added some defenses against resize crashes, and put in debug
	  messages if they're encountered
	In filters 'true' and 'false' are now valid tokens.
	The 'all' filter has been redefinied to be 'true' and there is a
	  'none' filter defined as 'false'
	Fixed bug in 'unsub' command that could cause file corruption
	In the zlist function, give a more detailed error message if
	  the file cannot be opened.
	Renamed old instances of zsig_exec in the code to zsigproc
	Don't print the stderr from zsigproc
	Added a 'loadloginsubs' command to load login subscriptions from a
	  file
	Added a 'loadsubs' command to eventually phase out the 'load-subs'
	  command
	Made M-n work on classes and instances with spaces in them
	Zaway now obeys the smart strip variable
	Hacked the build system to not have the -E link problem on Athena
	Added ZResetAuthentication in a number of places to fix problems
	  with stale tickets
	Added some hooks for malloc debugging
	M-p is bound to 'view personal' by default