@@ -7,6 +7,11 @@ $Id$
 	   'default' 'basic' or 'perl', but the last only if a
 	   format_msg() function is found in .owlconf
 	Added the 'oneline' style
+	Added the 'default_style' variable
+	Added the 'toggle-oneline' command
+	the 'o' key is bound to 'toggle-oneline'
+	Really use just one view now, named 'main' and recalculate
+	  messages when its filter is changed
 	
 2.0.3
 	Don't ring the terminal bell on mail messages.
